forgot to put token stuff out of git update

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "NjU0MTM5OTc3NjI1NTAxNzM3.XfBODw.l2pTSVoDgq9-kenWN9TIt8oRmj0",
+    "token": "NjU0MTM5OTc3NjI1NTAxNzM3.XfCeWg.TCB1pazgTxMwLvjDqr0pX09shCE",
     "build": [4, 0, 0],
     "defaultPrefix": "!",
     "prefix": {
